--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     font-weight: normal;
     /* line-height: 3px; */
 } 
+
+.clr{
+    clear: both;
+}
 .box-1{
     background-color: #333;
     border: 3px dotted #ccc;
@@ -77,7 +81,7 @@ a:active{
 .catogories ul{
     padding: 0;
     padding-left: 20px
-    list-style: square;
+    /* list-style: square; */
     list-style: none;
 }
 
@@ -101,7 +105,80 @@ a:active{
     display: block;
 }
 
-.my-form input [type ="text" ], .my-form textarea{
+.my-form input [type = "text"], .my-form textarea{
     padding: 8px;
     width: 100%;
+}
+.button{
+    background-color: #333;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+
+}
+
+.block{
+    float: left;
+    width: 33.3%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#main-block {
+    float: left;
+    width: 70%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+#sidebar {
+    float: right;
+    width: 30%;
+    background-color: #2b2525;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+.p-box {
+    width: 800px;
+    height: 500px;
+    border: 1px solid #000;
+    margin-top: 30px;
+    position: relative;
+    background-image: url(/images.jpg);
+    background-position: 100px 200px;
+    background-position: center top;
+}
+
+.p-box h1 {
+    position: absolute;
+    top:100px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me {
+    position: fixed; 
+    top: 400px;
+}
+
+.my-list li:first-child {
+    background: red;
+}
+
+.my-list li:last-child {
+    background:  navy;
+}
+
+.my-list li:nth-child(5) {
+    background: yellow;
+}
+
+.my-list li:nth-child(even) {
+    background: gray;
 }
